<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="#FFDADA">

    <TextView
        android:id="@+id/heading"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:textAlignment="center"
        android:textColor="#2B2B2B"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="New Task"
        android:background="#FFFFFF"
        android:hint="@string/enter_new_task"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="15dp"
        android:textColorHint="#5A5A5A" />

    <Button
        android:id="@+id/addbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>